--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
 			<!-- SL Input Area -->
 			<div id="slInputArea" style="margin-top:20px;">
 				<input type="text" id="playerName" placeholder="YOUR NAME" maxlength="12"
-					style="background:rgba(0,0,0,0.5); border:1px solid #00f3ff; color:#fff; padding:10px; font-family:'Exo'; font-size:20px; text-transform:uppercase; text-align:center; outline:none; box-shadow: 0 0 10px #00f3ff;">
+					style="background:rgba(255,255,255,0.8); border:1px solid #2c3e50; color:#2c3e50; padding:10px; font-family:'Exo'; font-size:20px; text-transform:uppercase; text-align:center; outline:none;">
 				<br>
 				<button onclick="submitToSL()"
-					style="margin-top:10px; background:#00f3ff; color:#000; padding:10px 20px; font-weight:bold; font-family:'Exo'; cursor:pointer; box-shadow: 0 0 10px #00f3ff;">SUBMIT
+					style="margin-top:10px; background:#2c3e50; color:#ecf0f1; padding:10px 20px; font-weight:bold; font-family:'Exo'; cursor:pointer;">SUBMIT
 					SCORE</button>
 			</div>
 
